syntax = "proto3";

package proto;

option go_package = "github.com/oxyii/go-grpc-node-example/proto";

import "google/protobuf/wrappers.proto";

service Test {
  rpc Unary(google.protobuf.StringValue) returns (google.protobuf.StringValue);
  rpc ClientStream(stream google.protobuf.StringValue) returns (google.protobuf.StringValue);
  rpc ServerStream(google.protobuf.StringValue) returns (stream google.protobuf.StringValue);
  rpc BidiStream(stream google.protobuf.StringValue) returns (stream google.protobuf.StringValue);
}